--- a/ruby2_6_2/1.md
+++ b/ruby2_6_2/1.md
@@ -14,3 +14,27 @@ irb(main):005:0> str1 == str2
 irb(main):006:0> str1.equal?(str2)
 => false
 ```
+
+## 1-2
+
+```ruby
+irb(main):001:0> "string".class
+=> String
+irb(main):002:0> 1.class
+=> Integer
+irb(main):003:0> 1.class.class
+=> Class
+```
+
+## 1-3
+
+```ruby
+irb(main):001:0> str = "lilliput"
+=> "lilliput"
+irb(main):002:0> str.length
+=> 8
+irb(main):003:0> str << "ian"
+=> "lilliputian"
+irb(main):004:0> str.length
+=> 11
+```
