--- a/ruby2_6_2/1.md
+++ b/ruby2_6_2/1.md
@@ -38,3 +38,28 @@ irb(main):003:0> str << "ian"
 irb(main):004:0> str.length
 => 11
 ```
+
+## 1-4
+
+```ruby
+(2..100).each do |candidate|
+  sqrt = Math.sqrt(candidate)
+  factor_found = (2..sqrt).any? {|i| candidate % i == 0}
+
+  if factor_found then
+    print "#{candidate}は合成数\n"
+  else
+    print "#{candidate}は素数\n"
+  end
+end
+```
+
+```bash
+$ ruby 1_4.rb
+2は素数
+3は素数
+4は合成数
+5は素数
+6は合成数
+...
+```
