--- a/ruby2_6_2/1.md
+++ b/ruby2_6_2/1.md
@@ -63,3 +63,18 @@ $ ruby 1_4.rb
 6は合成数
 ...
 ```
+
+## 1-5
+
+```ruby
+3.times do
+  puts "Hello!"
+end
+```
+
+```bash
+$ ruby 1_5.rb
+Hello!
+Hello!
+Hello!
+```
