--- a/ruby2_6_2/4.md
+++ b/ruby2_6_2/4.md
@@ -1,11 +1,67 @@
-## 4-1
+## 4-10
 
 ```ruby
-irb(main):001:0> str = String.new
-=> ""
-irb(main):002:0> str << 72 << 101 << 108 << 108 << 111
-=> "Hello"
-irb(main):003:0> p str
-"Hello"
-=> "Hello"
+irb(main):001:0> ?1
+=> "1"
+irb(main):002:0> ?a
+=> "a"
+irb(main):003:0> ?\t
+=> "\t"
+irb(main):004:0> ?\M-\C-d
+=> "\x84"
+irb(main):005:0> ?\u2318
+=> "⌘"
+irb(main):006:0> ?あ
+=> "あ"
+```
+
+## 4-11
+
+```ruby
+irb(main):001:0> str = '<a href="https://www.google.com/" />'
+=> "<a href=\"http://google.com\" />"
+irb(main):002:0> if /<a href="(.*?)"[ >]/ =~ str
+irb(main):003:1> puts $1 + "へのリンクを発見"
+irb(main):004:1> end
+https://www.google.com/へのリンクを発見
+```
+
+## 4-12
+
+```ruby
+irb(main):002:0> story = <<EOS
+irb(main):003:0" Solomon Grundy,
+irb(main):004:0" Born on Monday,
+irb(main):005:0" Christened on Tuesday,
+irb(main):006:0" Married on Wednesday,
+irb(main):007:0" Took ill on Thrsday,
+irb(main):008:0" Worse on Friday,
+irb(main):009:0" Died on Saturday,
+irb(main):010:0" Buried on Sunday:
+irb(main):011:0" This is the end
+irb(main):012:0" of Solomon Grundy.
+irb(main):013:0" EOS
+
+
+irb(main):015:0> p story[0], story[1], story[2]
+"S"
+"o"
+"l"
+=> ["S", "o", "l"]
+irb(main):016:0> story[187]
+=> nil
+irb(main):017:0> p story[-1], story[-2], story[-3], story[-4]
+"\n"
+"."
+"y"
+"d"
+=> ["\n", ".", "y", "d"]
+irb(main):018:0> story[8, 6]
+=> "Grundy"
+irb(main):019:0> story[8...14]
+=> "Grundy"
+irb(main):020:0> story["Monday"]
+=> "Monday"
+irb(main):021:0> story[/\w+sday/]
+=> "Tuesday"
 ```
