Add 4-21 ~ to 4.md

--- a/ruby2_6_2/4.md
+++ b/ruby2_6_2/4.md
@@ -34,7 +34,7 @@ irb(main):003:0" Solomon Grundy,
 irb(main):004:0" Born on Monday,
 irb(main):005:0" Christened on Tuesday,
 irb(main):006:0" Married on Wednesday,
-irb(main):007:0" Took ill on Thrsday,
+irb(main):007:0" Took ill on Thursday,
 irb(main):008:0" Worse on Friday,
 irb(main):009:0" Died on Saturday,
 irb(main):010:0" Buried on Sunday:
@@ -64,4 +64,51 @@ irb(main):020:0> story["Monday"]
 => "Monday"
 irb(main):021:0> story[/\w+sday/]
 => "Tuesday"
+```
+
+## 4-21
+
+```ruby
+irb(main):001:0> "%04d" % 3
+=> "0003"
+irb(main):002:0> "%08.4f" % (Math::PI*10)
+=> "031.4159"
+irb(main):003:0> "hex=%X, oct=%o" % [10, 10]
+=> "hex=A, oct=12"
+```
+
+## 4-33
+
+```ruby
+irb(main):001:0> utf = "日本"
+=> "日本"
+irb(main):002:0> utf.encoding
+=> #<Encoding:UTF-8>
+irb(main):003:0> sjis = utf.encode("Shift_JIS")
+=> "\x{93FA}\x{967B}"
+irb(main):004:0> sjis.encoding
+=> #<Encoding:Shift_JIS>
+```
+
+## 4-35
+
+```ruby
+irb(main):005:0> sjis = "ラグナグ".encode("Shift_JIS")
+=> "\x{8389}\x{834F}\x{8369}\x{834F}"
+irb(main):006:0> euc = "への旅".encode("EUC-JP")
+=> "\x{A4D8}\x{A4CE}\x{CEB9}"
+irb(main):007:0> sjis + euc
+...
+Encoding::CompatibilityError (incompatible character encodings: Shift_JIS and EUC-JP)
+```
+
+## 4-36
+
+```ruby
+irb(main):001:0> sjis = "ラグナグ".encode("Shift_JIS")
+=> "\x{8389}\x{834F}\x{8369}\x{834F}"
+irb(main):002:0> utf = "voyage to ".force_encoding("UTF-8")
+=> "voyage to "
+irb(main):003:0> utf + sjis
+=> "voyage to \x{8389}\x{834F}\x{8369}\x{834F}"
 ```
