Add 5-11 to 5.md and 5_11.rb file

--- a/ruby2_6_2/5.md
+++ b/ruby2_6_2/5.md
@@ -10,3 +10,22 @@ puts "#{expression} = #{total}"
 $ ruby 5_1.rb 1 2 3
 1 + 2 + 3 = 6
 ```
+
+## 5-11
+
+```ruby
+require 'stringio'
+buffer = String.new
+sio = StringIO.new(buffer)
+$stderr = $stdout = sio
+puts "untuh"
+warn "outed"
+$stdout = STDOUT
+puts buffer
+```
+
+```sh
+$ ruby 5_11.rb
+untuh
+outed
+```
